[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Cutscene/ActTwo/Act_02 _Scene_02.png" type="Texture" id=1]
[ext_resource path="res://Assets/Cutscene/ActTwo/Act_02 _Scene_01.png" type="Texture" id=2]
[ext_resource path="res://Fonts/CutsceneText.tres" type="DynamicFont" id=3]
[ext_resource path="res://Screens/CutsceneStory/Story.gd" type="Script" id=5]
[ext_resource path="res://Presets/Transition.tscn" type="PackedScene" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Scenes" type="Control" parent="."]
margin_left = -1.0
margin_top = 2.0
margin_right = 1919.0
margin_bottom = 1082.0

[node name="FrameOne" type="TextureButton" parent="Scenes"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )

[node name="ScrollText" type="RichTextLabel" parent="Scenes/FrameOne"]
margin_left = 171.0
margin_top = 345.0
margin_right = 683.0
margin_bottom = 864.0
rect_rotation = -0.108001
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 3 )
text = "After destroying the gates of purgatory, Rob is released from his former home."

[node name="FrameTwo" type="TextureButton" parent="Scenes"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 1 )

[node name="ScrollText" type="RichTextLabel" parent="Scenes/FrameTwo"]
margin_left = 578.0
margin_top = 787.0
margin_right = 1401.0
margin_bottom = 952.0
rect_rotation = -0.291666
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 3 )
text = "Now, it was time for the journey to begin."
scroll_active = false

[node name="TypingTimer" type="Timer" parent="."]
wait_time = 0.01

[node name="Transition" parent="." instance=ExtResource( 6 )]

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="TypingTimer" to="." method="_on_TypingTimer_timeout"]
[connection signal="transition_out_done" from="Transition" to="." method="_on_Transition_transition_out_done"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
